--- a/projects/msvc/nifti/nifti.vcxproj
+++ b/projects/msvc/nifti/nifti.vcxproj
@@ -10,6 +10,24 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\nifti\config.h" />
+    <ClInclude Include="..\..\..\nifti\dbh.h" />
+    <ClInclude Include="..\..\..\nifti\extended_fslio.h" />
+    <ClInclude Include="..\..\..\nifti\fslio.h" />
+    <ClInclude Include="..\..\..\nifti\nifti1.h" />
+    <ClInclude Include="..\..\..\nifti\nifti1_io.h" />
+    <ClInclude Include="..\..\..\nifti\znzlib.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\..\nifti\extended_fslio.c" />
+    <ClCompile Include="..\..\..\nifti\fslio.c" />
+    <ClCompile Include="..\..\..\nifti\nifti1_io.c" />
+    <ClCompile Include="..\..\..\nifti\znzlib.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\nifti\Makefile" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{6A6BC8A5-A9F7-4E54-B15F-3FA4D1FE3C13}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
@@ -19,13 +37,13 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -38,12 +56,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSdkDir)include;$(FrameworkSDKDir)\include;..\..\nifti</IncludePath>
-    <OutDir>..\..\lib\win\$(Configuration)</OutDir>
+    <IncludePath>../../../zlib;../../../nifti;./;$(IncludePath)</IncludePath>
+    <OutDir>..\..\..\lib\win\$(Configuration)</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSdkDir)include;$(FrameworkSDKDir)\include;..\..\nifti</IncludePath>
-    <OutDir>..\..\lib\</OutDir>
+    <IncludePath>../../../zlib;../../../nifti;./;$(IncludePath)</IncludePath>
+    <OutDir>..\..\..\lib\win\$(Configuration)\</OutDir>
     <IntDir>obj\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -53,8 +71,9 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>HAVE_ZLIB;WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions);USE_RAPID</PreprocessorDefinitions>
-      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <AdditionalIncludeDirectories>..\..\zlib-1.2.3</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
+      <AdditionalIncludeDirectories>
+      </AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -70,7 +89,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -79,24 +98,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <None Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\nifti\config.h" />
-    <ClInclude Include="..\..\nifti\dbh.h" />
-    <ClInclude Include="..\..\nifti\extended_fslio.h" />
-    <ClInclude Include="..\..\nifti\fslio.h" />
-    <ClInclude Include="..\..\nifti\nifti1.h" />
-    <ClInclude Include="..\..\nifti\nifti1_io.h" />
-    <ClInclude Include="..\..\nifti\znzlib.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\nifti\extended_fslio.c" />
-    <ClCompile Include="..\..\nifti\fslio.c" />
-    <ClCompile Include="..\..\nifti\nifti1_io.c" />
-    <ClCompile Include="..\..\nifti\znzlib.c" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
