--- a/projects/msvc/util/util.vcxproj
+++ b/projects/msvc/util/util.vcxproj
@@ -18,6 +18,7 @@
     <ClInclude Include="..\..\..\util\DTIFilter.h" />
     <ClInclude Include="..\..\..\util\DTIFilterAlgorithm.h" />
     <ClInclude Include="..\..\..\util\DTIFilterPathwayScalar.h" />
+    <ClInclude Include="..\..\..\util\DTIFilterROI.h" />
     <ClInclude Include="..\..\..\util\DTIFilterTree.h" />
     <ClInclude Include="..\..\..\util\DTIMath.h" />
     <ClInclude Include="..\..\..\util\DTIPathDistanceMatrix.h" />
@@ -111,6 +112,7 @@
     <ClCompile Include="..\..\..\util\DTIFilter.cpp" />
     <ClCompile Include="..\..\..\util\DTIFilterAlgorithm.cpp" />
     <ClCompile Include="..\..\..\util\DTIFilterPathwayScalar.cpp" />
+    <ClCompile Include="..\..\..\util\DTIFilterROI.cpp" />
     <ClCompile Include="..\..\..\util\DTIFilterTree.cpp" />
     <ClCompile Include="..\..\..\util\DTIMath.cpp" />
     <ClCompile Include="..\..\..\util\DTIPathDistanceMatrix.cpp" />
@@ -158,7 +160,7 @@
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -171,11 +173,10 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>C:\Program Files %28x86%29\VTK\include\vtk-5.4;$(IncludePath)</IncludePath>
+    <IncludePath>../../../util;../../../opcode;../../../nifti;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <LibraryPath>C:\Program Files %28x86%29\VTK\lib\vtk-5.4;$(LibraryPath)</LibraryPath>
-    <OutDir>..\..\lib\</OutDir>
+    <OutDir>..\..\..\lib\win\$(Configuration)</OutDir>
     <IntDir>obj\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -183,7 +184,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <IntDir>obj\$(Configuration)\</IntDir>
-    <IncludePath>../../../util;../../../opcode;$(IncludePath)</IncludePath>
+    <IncludePath>../../../util;./;../../../RAPID201;../../../opcode;../../../nifti;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -191,9 +192,10 @@
       </PrecompiledHeader>
       <WarningLevel>TurnOffAllWarnings</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions);USE_RAPID</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\..;..;..\..\..\tnt;..\..\..\nifti;c:\vtk-5.8\include</AdditionalIncludeDirectories>
-      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions);</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>./;..\..\..;..;..\..\..\tnt;..\..\..\nifti;C:\VTK-Git\include\vtk-5.11</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
+      <BasicRuntimeChecks>Default</BasicRuntimeChecks>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -208,9 +210,9 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions);USE_RAPID</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..;..;..\..\tnt;..\..\RAPID201;..\..\nifti</AdditionalIncludeDirectories>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>..\..\..;..;..\..\..\tnt;..\..\..\nifti;C:\VTK-Git\include\vtk-5.11</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
